<resources>
    <string name="app_name">FindMe</string>
    <string name="no_string">&#160;</string>
    <string name="main_bar">&lt;Main</string>
    <string name="here">HERE\n여기에 있어요</string>
    <string name="not_here">NOT HERE\n여기에 없어요</string>
    <string name="test">I lost him in front of E3. He is wearing red ribbon. Please find himTT </string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="name_default">FireBase Connection fail</string>
    <string name="date_default">10.10.2021</string>
    <string name="pet_info">Pet Info</string>
    <string name="location">Location</string>
    <string name="sign_text">Sign</string>
    <string name="email_hint">Email…</string>
    <string name="password_hint">Password…</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_account">Need New Account?</string>
    <string name="login_fail">로그인에 실패했습니다.</string>
</resources>