<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/base_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="20"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/Top_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/teal_700"
            android:orientation="horizontal">

            <Button
                android:id="@+id/main_bar"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:background="@color/teal_700"
                android:text="@string/main_bar"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="330dp"
                android:layout_height="match_parent"
                android:text="@string/no_string" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="18">

            <LinearLayout
                android:id="@+id/Pet_info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >


                <LinearLayout
                    android:id="@+id/pet_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:text="@string/name" />
                    <TextView
                        android:id="@+id/pet_name_here"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:text="@string/name_default" />
                </LinearLayout>

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:id="@+id/pet_date_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weightsum="10"
                    >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:text="@string/date" />
                    <TextView
                        android:id="@+id/pet_date_here"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:text="@string/date_default"
                        />
                </LinearLayout>

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                    </TableRow>
                </TableLayout>

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/Bottome_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"

            android:weightSum="2">

            <Button
                android:id="@+id/here_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/here_sign"
                android:text="@string/here"
                android:textColor="@color/white"

                />

            <Button
                android:id="@+id/not_here_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/not_here_sign"
                android:text="@string/not_here"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>