<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.KtLoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/login_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitCenter"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:padding="4dp"
                android:background="@drawable/inputs"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/login_email"
                android:hint="@string/password_hint"
                android:inputType="textEmailAddress"
                android:padding="4dp"
                android:background="@drawable/inputs"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forget_password_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/login_password"
                android:text="@string/forgot_password"
                android:inputType="textEmailAddress"
                android:layout_marginTop="2dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="23dp"
                android:textAlignment="textEnd"
                android:textSize="17dp"
                android:textStyle="bold">
                <!--                android:drawableStart="@drawable/email">-->

            </TextView>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forget_password_link"
                android:padding="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:text="Login"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textColor="@android:color/background_light">

            </Button>

            <TextView
                android:id="@+id/new_account_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/login_button"
                android:text="@string/new_account"
                android:layout_marginTop="2dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="23dp"
                android:textAlignment="center"
                android:textSize="17dp"
                android:textStyle="bold">
                <!--                android:drawableStart="@drawable/email">-->

            </TextView>


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>